got stuff from UI up to Cosmos Db Emulator. Needs a lot of refactoring now to get consistency, and meaningful names

--- a/BlazorMarkdig/Client/BlazorMarkdig.Client.csproj
+++ b/BlazorMarkdig/Client/BlazorMarkdig.Client.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\MyOverflow.Shared\MyOverflow.Shared.csproj" />
     <ProjectReference Include="..\Shared\BlazorMarkdig.Shared.csproj" />
   </ItemGroup>
 
