--- a/BlazorMarkdig/Server/BlazorMarkdig.Server.csproj
+++ b/BlazorMarkdig/Server/BlazorMarkdig.Server.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\MyOverflow.Shared\MyOverflow.Shared.csproj" />
     <ProjectReference Include="..\Client\BlazorMarkdig.Client.csproj" />
     <ProjectReference Include="..\Shared\BlazorMarkdig.Shared.csproj" />
   </ItemGroup>
