Blob Storage emulator working.  Uploading images to blob storage, as well as question to Cosmos emulator.  UI loads image from blob storage.

--- a/MyOverflow.Api/MyOverflow.Api.csproj
+++ b/MyOverflow.Api/MyOverflow.Api.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorMarkdig\Shared\BlazorMarkdig.Shared.csproj" />
+    <ProjectReference Include="..\MyOverflow.DataAccess.Blob\MyOverflow.DataAccess.Blob.csproj" />
     <ProjectReference Include="..\MyOverflow.DataAccess.Cosmos\MyOverflow.DataAccess.Cosmos.csproj" />
   </ItemGroup>
 
